kubernetes/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: microservice-dev
  labels:
    app: api-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: api-service
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: metrics
    port: 9090
    targetPort: 9090
